Adding _nav.scss

--- a/css/train.css
+++ b/css/train.css
@@ -33,16 +33,32 @@ strong, b {
 }
 
 /* line 6, ../scss/modules/_layout.scss */
+nav.horizontal.full > ul > li a, .button-full {
+  top: 50%;
+  -webkit-translateY: -50%;
+  -moz-translateY: -50%;
+  -ms-translateY: -50%;
+  -o-translateY: -50%;
+  translateY: -50%;
+}
+
+/* line 11, ../scss/modules/_layout.scss */
+nav.horizontal > ul {
+  overflow: hidden;
+  *zoom: 1;
+}
+
+/* line 15, ../scss/modules/_layout.scss */
 html {
   height: 100%;
 }
 
-/* line 10, ../scss/modules/_layout.scss */
+/* line 19, ../scss/modules/_layout.scss */
 *, *:before, *:after {
   position: relative;
 }
 
-/* line 58, ../scss/modules/_layout.scss */
+/* line 67, ../scss/modules/_layout.scss */
 .inline {
   display: inline-block;
   margin-bottom: 0;
@@ -2512,12 +2528,12 @@ ul, ol, dl {
   padding: 0;
 }
 /* line 127, ../scss/modules/_type.scss */
-ul.clean, ol.clean, dl.clean {
+ul.clean, nav ul, ol.clean, dl.clean {
   list-style: none;
   margin-left: 0;
 }
 /* line 108, ../scss/modules/_type.scss */
-ul.clean ul, ul.clean ol, ol.clean ul, ol.clean ol, dl.clean ul, dl.clean ol {
+ul.clean ul, nav ul ul, ul.clean ol, nav ul ol, ol.clean ul, ol.clean ol, dl.clean ul, dl.clean ol {
   list-style: none;
   margin-left: 0;
 }
@@ -2585,40 +2601,33 @@ dl dd {
   margin-bottom: 0.5rem;
 }
 
-/* line 176, ../scss/modules/_type.scss */
+/* line 174, ../scss/modules/_type.scss */
+nav.horizontal > ul > li {
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+/* line 180, ../scss/modules/_type.scss */
 .align-left {
   text-align: left;
 }
 
-/* line 177, ../scss/modules/_type.scss */
+/* line 181, ../scss/modules/_type.scss */
 .align-right {
   text-align: right;
 }
 
-/* line 178, ../scss/modules/_type.scss */
+/* line 182, ../scss/modules/_type.scss */
 .align-center {
   text-align: center;
 }
 
-/* line 184, ../scss/modules/_type.scss */
-.valign-center:before {
-  content: "";
-  display: inline-block;
-  height: 100%;
-  vertical-align: middle;
-}
-/* line 191, ../scss/modules/_type.scss */
-.valign-center > * {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-/* line 202, ../scss/modules/_type.scss */
+/* line 185, ../scss/modules/_type.scss */
 .stacked {
   margin-bottom: 0;
 }
 
-/* line 207, ../scss/modules/_type.scss */
+/* line 190, ../scss/modules/_type.scss */
 abbr, acronym, blockquote, code, dir, kbd, listing, plaintext, q, samp, tt, var, xmp {
   -webkit-hyphens: none;
   -moz-hyphens: none;
@@ -2627,7 +2636,7 @@ abbr, acronym, blockquote, code, dir, kbd, listing, plaintext, q, samp, tt, var,
   hyphens: none;
 }
 
-/* line 212, ../scss/modules/_type.scss */
+/* line 195, ../scss/modules/_type.scss */
 pre {
   white-space: pre;
   color: #222222;
@@ -2635,14 +2644,14 @@ pre {
   font-size: 1rem ;
   font-family: monospace;
 }
-/* line 218, ../scss/modules/_type.scss */
+/* line 201, ../scss/modules/_type.scss */
 pre code {
   word-wrap: normal;
   white-space: -moz-pre-wrap;
   white-space: pre-wrap;
 }
 
-/* line 225, ../scss/modules/_type.scss */
+/* line 208, ../scss/modules/_type.scss */
 code {
   white-space: pre;
   color: #222222;
@@ -2651,26 +2660,26 @@ code {
   font-family: monospace;
 }
 
-/* line 233, ../scss/modules/_type.scss */
+/* line 216, ../scss/modules/_type.scss */
 blockquote {
   color: #484848;
   padding: 1rem;
   border-left: 1px solid #484848;
   margin-bottom: 1rem;
 }
-/* line 239, ../scss/modules/_type.scss */
+/* line 222, ../scss/modules/_type.scss */
 blockquote cite {
   display: block;
   font-size: 13.77648px ;
   font-size: 0.86103rem ;
   color: #484848;
 }
-/* line 245, ../scss/modules/_type.scss */
+/* line 228, ../scss/modules/_type.scss */
 blockquote p {
   color: #484848;
 }
 
-/* line 251, ../scss/modules/_type.scss */
+/* line 234, ../scss/modules/_type.scss */
 hr {
   clear: both;
   height: 0;
@@ -2680,12 +2689,64 @@ hr {
   border-width: 1px 0 0;
 }
 
-/* line 261, ../scss/modules/_type.scss */
+/* line 244, ../scss/modules/_type.scss */
 abbr, acronym {
   font-size: 86.10298%;
   text-transform: uppercase;
   border-bottom: 1px dotted #c44741;
   cursor: help;
+}
+
+/* line 4, ../scss/modules/_nav.scss */
+nav ul {
+  width: 100%;
+  padding: 0;
+  background-color: transparent;
+}
+/* line 10, ../scss/modules/_nav.scss */
+nav ul li {
+  padding: 0;
+}
+/* line 13, ../scss/modules/_nav.scss */
+nav ul li a {
+  display: block;
+  padding: 0.5rem;
+}
+/* line 18, ../scss/modules/_nav.scss */
+nav ul li.inactive {
+  display: none;
+}
+/* line 22, ../scss/modules/_nav.scss */
+nav ul li.active > ul {
+  display: block;
+}
+/* line 27, ../scss/modules/_nav.scss */
+nav ul ul {
+  display: none;
+  background-color: #364656;
+}
+/* line 37, ../scss/modules/_nav.scss */
+nav.horizontal > ul > li {
+  float: left;
+}
+/* line 43, ../scss/modules/_nav.scss */
+nav.horizontal.full {
+  height: 100%;
+}
+/* line 46, ../scss/modules/_nav.scss */
+nav.horizontal.full > ul {
+  height: 100%;
+}
+/* line 49, ../scss/modules/_nav.scss */
+nav.horizontal.full > ul > li {
+  height: 100%;
+}
+/* line 52, ../scss/modules/_nav.scss */
+nav.horizontal.full > ul > li a {
+  height: 100%;
+  width: 100%;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 /* line 4, ../scss/modules/_buttons.scss */
@@ -2738,18 +2799,6 @@ button.link, .link.button, input.link[type=submit] {
   height: 100%;
   padding: 0;
   display: block;
-}
-/* line 184, ../scss/modules/_type.scss */
-.button-full:before {
-  content: "";
-  display: inline-block;
-  height: 100%;
-  vertical-align: middle;
-}
-/* line 191, ../scss/modules/_type.scss */
-.button-full > * {
-  display: inline-block;
-  vertical-align: middle;
 }
 
 /* line 2, ../scss/modules/_forms.scss */
@@ -3053,23 +3102,23 @@ body {
   margin-top: 60px;
   margin-bottom: 0;
 }
-/* line 32, ../scss/modules/_layout.scss */
+/* line 41, ../scss/modules/_layout.scss */
 body > header, body > footer {
   position: fixed;
   width: 100%;
   z-index: 2;
 }
-/* line 38, ../scss/modules/_layout.scss */
+/* line 47, ../scss/modules/_layout.scss */
 body > header {
   height: 60px;
   top: 0;
 }
-/* line 43, ../scss/modules/_layout.scss */
+/* line 52, ../scss/modules/_layout.scss */
 body > footer {
   height: 0;
   bottom: 0;
 }
-/* line 48, ../scss/modules/_layout.scss */
+/* line 57, ../scss/modules/_layout.scss */
 body > section {
   min-height: 100%;
 }
