--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -16,6 +16,7 @@
     'modules/_grid',
     'modules/_layers',
     'modules/_type',
+    'modules/_nav',
     'modules/_buttons',
     'modules/_forms',
     'modules/_fieldsets',
