--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -63,7 +63,7 @@ button, .button, input[type=submit] {
     padding: 0;
     display: block;
 
-    @include verticalAlign(center);
+    @extend %valign-center;
 }
 
 .button-block {
