--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -19,6 +19,7 @@
     'modules/_nav',
     'modules/_buttons',
     'modules/_forms',
+    'modules/_labels',
     'modules/_fieldsets',
     'modules/_tables',
     'modules/_media',
