--- a/scss/extensions/_ext_fieldset_stacked.scss
+++ b/scss/extensions/_ext_fieldset_stacked.scss
@@ -1,12 +1,21 @@
 
 
 %ext-fieldset-stacked {
-    padding: $x-rem;
+    padding: $x-rem/2 $x-rem;
     border: $fieldset-border-width;
     margin: 0;
 
     .field {
         height: auto;
         padding: 0;
+
+        @if $form-use-radius {
+            &.topfix {
+                @include border-radius($form-radius $form-radius 0 0);
+            }
+            &.bottomfix {
+                @include border-radius(0 0 $form-radius $form-radius);
+            }
+        }
     }
 }
