--- a/scss/settings/_functions.scss
+++ b/scss/settings/_functions.scss
@@ -2,7 +2,7 @@
 // Returns foreground (text) color based on background color and lightness threshold
 @function foregroundColor($color, $darken: 35%, $threshold: 65%, $color-light: $color-light, $color-dark: $color-dark) {
     @if lightness($color) > $threshold {
-        @return darken($color, $darken);
+        @return $color-dark;
     } @else {
         @return $color-light;
     }
