--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -194,16 +194,16 @@ $text-radius: $form-radius !default;
 $textarea-height: 5 * $x-rem !default;
 $textarea-resize: vertical !default;
 
-// Label Settings
-$label-display: block !default;
-$label-margin-bottom: $x/2 !default;
-$label-type-scale: $form-type-scale !default;
-$label-affix-type-scale: $label-type-scale !default;
-$label-affix-padding-vertical: $form-padding-vertical !default;
-$label-affix-padding-horizontal: $form-padding-horizontal !default;
-$label-affix-bgcolor: $color-gray !default;
-$label-affix-border-color: darken($color-gray, 15%) !default;
-$label-affix-border-width: $form-border-width !default;
+// Field Label Settings
+$field-label-display: block !default;
+$field-label-margin-bottom: $x/2 !default;
+$field-label-type-scale: $form-type-scale !default;
+$field-label-affix-type-scale: $field-label-type-scale !default;
+$field-label-affix-padding-vertical: $form-padding-vertical !default;
+$field-label-affix-padding-horizontal: $form-padding-horizontal !default;
+$field-label-affix-bgcolor: $color-gray !default;
+$field-label-affix-border-color: darken($color-gray, 15%) !default;
+$field-label-affix-border-width: $form-border-width !default;
 
 // Fieldset Settings
 $fieldset-style: stacked !default;
@@ -250,7 +250,24 @@ $nav-a-padding: $x-rem / 2 !default;
 $nav-menu-bgcolor: transparent !default;
 $nav-submenu-bgcolor: $color-primary !default;
 
+// Label (and Badge) Settings
+$label-style: normal !default;
+$label-type-scale: -2 !default;
+$label-font-weight: bold !default;
+$label-text-transform: none !default;
+$label-padding: $x-rem/4 $x-rem/2 !default;
+$label-bgcolor: $color-primary !default;
+$label-color: $color-light !default;
+$label-use-radius: $form-use-radius !default;
+$label-margin: 0 $x/2 !default;
 
-
-
+$badge-style: normal !default;
+$badge-type-scale: $label-type-scale !default;
+$badge-font-weight: $label-font-weight !default;
+$badge-text-transform: none !default;
+$badge-padding: $label-padding !default;
+$badge-bgcolor: $label-bgcolor !default;
+$badge-color: $label-color !default;
+$badge-use-radius: $label-use-radius !default;
+$badge-collapse: true !default;
 
